log
Fri 12 Aug 2022 12:30:52 PM UTC: 
 exercises.c | 36 +++++++++++-------------------------
 1 file changed, 11 insertions(+), 25 deletions(-)
 tests:  0|7
total_score: 0/70
4c1108d
Fri 12 Aug 2022 12:33:05 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:16:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   16 |   c = a + b;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
00ccecb
Fri 12 Aug 2022 12:33:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
bf93335
Fri 12 Aug 2022 12:46:16 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:49:28: error: expected expression before ‘]’ token
   49 |   *suma = sumaN(arrayCopia[], m);
      |                            ^
exercises.c:42:7: error: variable ‘arrayCopia’ set but not used [-Werror=unused-but-set-variable]
   42 |   int arrayCopia[m];
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
77094b0
Fri 12 Aug 2022 12:46:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
d05784e
Fri 12 Aug 2022 12:51:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
7822155
Fri 12 Aug 2022 12:56:44 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
a68ccce
Fri 12 Aug 2022 01:03:26 PM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
df36967
Fri 12 Aug 2022 01:06:16 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|6
total_score: 10/70
4889cca
Fri 12 Aug 2022 01:06:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a44fbc4
Fri 12 Aug 2022 01:06:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4f4bd74
Fri 12 Aug 2022 01:12:08 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:91:22: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   91 |   Vector* arreglo = (vector *) calloc (n , sizeof(Vector));
      |                      ^~~~~~
      |                      Vector
exercises.c:91:22: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:91:30: error: expected expression before ‘)’ token
   91 |   Vector* arreglo = (vector *) calloc (n , sizeof(Vector));
      |                              ^
exercises.c:91:11: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   91 |   Vector* arreglo = (vector *) calloc (n , sizeof(Vector));
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
271d69a
Fri 12 Aug 2022 01:12:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:91:11: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   91 |   Vector* arreglo = (Vector *) calloc (n , sizeof(Vector));
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6d3ba0f
Fri 12 Aug 2022 01:12:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
d0c2e59
